Implemented some exception handling

--- a/LabbBlazor/Components/Pages/NewUser.razor
+++ b/LabbBlazor/Components/Pages/NewUser.razor
@@ -2,7 +2,8 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Components.Forms
 @rendermode InteractiveServer
-<h3>New User</h3>
+<PageTitle>New User</PageTitle>
+<h3>Register new user</h3>
 
 @if (!_validFormSubmited)
 {
