--- a/LabbBlazor/Components/Pages/Home.razor
+++ b/LabbBlazor/Components/Pages/Home.razor
@@ -2,6 +2,10 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>The people site</h1>
 
-Welcome to your new app.
+Welcome to the people site
+<br />
+Become a people user to!
+<br />
+Or check out our current users.
