--- a/LabbBlazor/Components/Pages/Todos.razor
+++ b/LabbBlazor/Components/Pages/Todos.razor
@@ -1,15 +1,22 @@
-﻿@page "/todos"
+﻿@using System.Text.Json
+@using System.Net.Sockets
 @rendermode InteractiveServer
 
-@if(CurrentUser != null)
+@if (CurrentUser != null)
 {
     <h3>Todos for user @CurrentUser.ID: @CurrentUser.Name</h3>
 }
+@if (_todoDataErrorMessage != null)
+{
+    <p>Could not load todo data (@_todoDataErrorMessage)</p>
+}
 
 <InputCheckbox @bind-Value="_onlyShowIncompletedTodos" @bind-Value:after=Filter></InputCheckbox>
-Only show incompleted<br />
+Only show incompleted
+<br />
 <InputText @bind-Value="_seachTerm" @oninput=OnSearchInput></InputText>
-Search for task<br />
+Search for task
+<br />
 
 <table class="table">
     <thead>
@@ -39,18 +46,65 @@ Search for task<br />
     private List<ToDo> _currentUserTodosFiltered = new List<ToDo>();
     private bool _onlyShowIncompletedTodos = false;
     private string _seachTerm = string.Empty;
+    private string? _todoDataErrorMessage;
 
     protected override void OnInitialized()
     {
+        //_toDoData = new ToDoSampleDataAccess();
+        
         _toDoData = new TodoApiDataAccess();
     }
     protected override async Task OnParametersSetAsync()
     {
+        await SetTodoData();
+        Filter();
+    }
+    private async Task SetTodoData()
+    {
         if (CurrentUser != null && _toDoData != null)
         {
-            var result = await _toDoData.GetDataAsync();
-            _currentUserTodos = result.ToList().GetCurrentUserTodos(CurrentUser.ID);
-            Filter();
+            try
+            {
+                var result = await _toDoData.GetDataAsync();
+                _currentUserTodos = result.ToList().GetCurrentUserTodos(CurrentUser.ID);
+                _todoDataErrorMessage = null;
+            }
+            catch (DirectoryNotFoundException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (UnauthorizedAccessException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (FileNotFoundException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (IOException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (JsonException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (NotSupportedException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (SocketException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (HttpRequestException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
+            catch (ArgumentNullException ex)
+            {
+                _todoDataErrorMessage = ex.Message;
+            }
         }
     }
     private void OnSearchInput(ChangeEventArgs e)
