--- a/LabbBlazor/Components/Pages/Todos.razor
+++ b/LabbBlazor/Components/Pages/Todos.razor
@@ -120,7 +120,7 @@ Search for task
     }
     private void Search()
     {
-        _currentUserTodosFiltered = _currentUserTodos.FilterTodosByTitle(_seachTerm);
+        _currentUserTodosFiltered = _currentUserTodos.SearchTodosByTitle(_seachTerm);
     }
     private void ShowIncompletedTodos()
     {
