--- a/LabbBlazor/Components/Pages/Todos.razor
+++ b/LabbBlazor/Components/Pages/Todos.razor
@@ -2,128 +2,68 @@
 @using System.Net.Sockets
 @rendermode InteractiveServer
 
-@if (CurrentUser != null)
+@if (_viewModel != null)
 {
-    <h3>Todos for user @CurrentUser.ID: @CurrentUser.Name</h3>
-}
-@if (_todoDataErrorMessage != null)
-{
-    <p>Could not load todo data (@_todoDataErrorMessage)</p>
-}
+    <h3>Todos for user @_viewModel.CurrentUser.ID: @_viewModel.CurrentUser.Name</h3>
 
-<InputCheckbox @bind-Value="_onlyShowIncompletedTodos" @bind-Value:after=Filter></InputCheckbox>
-Only show incompleted
-<br />
-<InputText @bind-Value="_seachTerm" @oninput=OnSearchInput></InputText>
-Search for task
-<br />
+    @if (_viewModel.TodoDataErrorMessage != null)
+    {
+        <p>@_viewModel.TodoDataErrorMessage</p>
+    }
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Completed</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var todo in _currentUserTodosFiltered)
-        {
+    <InputCheckbox @bind-Value="_viewModel.OnlyShowIncompletedTodos" @bind-Value:after=_viewModel.Filter></InputCheckbox>
+    <span>Only show incompleted</span>
+    <br />
+
+    <InputText @bind-Value="_viewModel.SeachTerm" @oninput=OnSearchInput></InputText>
+    <span>Search for task</span>
+    <br />
+
+    <table class="table">
+        <thead>
             <tr>
-                <td>@todo.Id</td>
-                <td>@todo.Title</td>
-                <td>@todo.Completed</td>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Completed</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var todo in _viewModel.CurrentUserTodosFiltered)
+            {
+                <tr>
+                    <td>@todo.Id</td>
+                    <td>@todo.Title</td>
+                    <td>@todo.Completed</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+
 @code {
     [Parameter]
     public User? CurrentUser { get; set; }
     [Parameter]
     public IDataAccess? DataAccess { get; set; }
 
-    private List<ToDo> _currentUserTodos = new List<ToDo>();
-    private List<ToDo> _currentUserTodosFiltered = new List<ToDo>();
-    private bool _onlyShowIncompletedTodos = false;
-    private string _seachTerm = string.Empty;
-    private string? _todoDataErrorMessage;
+    private ToDosViewModel? _viewModel;
 
     protected override async Task OnParametersSetAsync()
     {
-        await SetToDoData();
-        Filter();
-    }
-    private async Task SetToDoData()
-    {
         if (CurrentUser != null && DataAccess != null)
         {
-            try
-            {
-                var result = await DataAccess.GetToDosAsync();
-                _currentUserTodos = result.ToList().GetCurrentUserTodos(CurrentUser.ID);
-                _todoDataErrorMessage = null;
-            }
-            catch (DirectoryNotFoundException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (UnauthorizedAccessException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (FileNotFoundException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (IOException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (JsonException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (NotSupportedException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (SocketException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (HttpRequestException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
-            catch (ArgumentNullException ex)
-            {
-                _todoDataErrorMessage = ex.Message;
-            }
+            _viewModel = new ToDosViewModel(DataAccess, CurrentUser);
+            await _viewModel.SetToDoData();
+            _viewModel.Filter();
         }
     }
+
     private void OnSearchInput(ChangeEventArgs e)
     {
         if (e.Value != null)
         {
-            _seachTerm = e.Value.ToString() ?? string.Empty;
+            _viewModel!.SeachTerm = e.Value.ToString() ?? string.Empty;
         }
-        Filter();
-    }
-    private void Filter()
-    {
-        Search();
-        if (_onlyShowIncompletedTodos)
-        {
-            ShowIncompletedTodos();
-        }
-    }
-    private void Search()
-    {
-        _currentUserTodosFiltered = _currentUserTodos.SearchTodosByTitle(_seachTerm);
-    }
-    private void ShowIncompletedTodos()
-    {
-        _currentUserTodosFiltered = _currentUserTodosFiltered.GetIncompletedTodos();
+        _viewModel!.Filter();
     }
 }
